--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,21 @@
+
 h1{
-	color:#666;
+	font-family: 'Playfair Display', serif;
+	font-weight: 400;
 }
+
+p{
+	font-family: 'Open Sans', sans-serif; 
+	font-size: 10pt;
+}
+
+a{
+	text-decoration: none;
+	color: #000;
+	font-family: 'Open Sans', sans-serif;
+}
+
+a:hover {
+	color: #666;
+}
+
