--- a/css/style.css
+++ b/css/style.css
@@ -1,72 +1,152 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-html{
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
 	margin: 0;
 	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
 
-body{
-	font-family: 'Open Sans', sans-serif;
-	color: #555753;
+#title {
+	font-family: 'Philosopher', sans-serif;
+	font-weight: 700;
+	font-size:48px;
+	margin-bottom:24px;
 }
 
-header {
-width:100%;
-margin-top:5%;
-margin-left: 3%;
+p {
+	font-family: 'Muli', sans-serif;
+	font-weight: 300; 
 }
 
-h1{
-	font-family: 'Playfair Display', serif;
-	font-weight: 400;
+#intro {
+	width: 50%;
+    margin: 0 auto;
+	margin-top:12%;
+	margin-bottom:2%; 
+	padding-bottom:2%;
+	text-align:center;
+	border-bottom: dotted 1px rgba(92, 98, 101, .75); 
 }
 
-h1#name-logo{
-	text-align: right;
+
+
+.navbar-default{
+	background-color:#fff; 
+	border-color:#fff; 
 }
 
-h3{
-	font-family: 'Playfair Display', serif;
-	font-weight: 400;
-	margin-bottom:0px;
+.navbar-default .navbar-brand {
+color:#666
+width: 500px;
+margin: 0 auto; 
 }
 
-p{
-	font-family: 'Open Sans', sans-serif; 
-	font-size: 9.5pt;
-}
 
-a{
-	text-decoration: none;
-	color: #000;
-	font-family: 'Open Sans', sans-serif;
-}
 
-a:hover {
+
+
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+/* CSS RESET */
+
+::-moz-selection { background: #fe57a1; color: #fff; text-shadow: none; }
+::selection { background: #fe57a1; color: #fff; text-shadow: none; }
+
+a:hover, a:active { outline: 0; }
+
+
+body {
+	font-family: 'Muli', sans-serif;
+	font-weight: 300; 
+	font-size: 15px;
+	line-height: 25px;
 	color: #666;
 }
 
-#sideNav{
-	width:200px;
+.box {
+	width:250px;
+	background:#fff;
+	border:1px solid #999;
+	padding: 15px;
+	margin: 10px;
 	float: left;
+
+
+-webkit-border-radius: 5px;
+border-radius: 5px;
+
+-webkit-box-shadow: 0px 0px 5px 1px #fff;
+box-shadow: 0px 0px 5px 1px #fff;
 }
 
-ul{
-	list-style-type:none;
+#main {
+	margin-top: 10px;
 }
 
-ul#main-nav li{
-	text-align:right !important;
-	line-height: 1.85em;
+.isotope-item {
+	z-index: 2;
 }
 
-ul#main-nav li a{
-	font-family: 'Open Sans', serif;
-	font-size: 10pt;
+.isotope-hidden.isotope-item {
+	pointer-events: none;
+	z-index: 1;
 }
 
-#resume-block{
-display:inline-block;
-margin-top:5%;
-margin-left:80px; 
-width: 650px;
+.isotope,
+.isotope .isotope-item {
+	/* change duration value to whatever you like */
+	-webkit-transition-duration: 0.8s;
+		-moz-transition-duration: 0.8s;
+		transition-duration: 0.8s;
+}
+
+.isotope {
+	-webkit-transition-property: height, width;
+	-moz-transition-property: height, width;
+	transition-property: height, width;
+}
+
+.isotope .isotope-item {
+	-webkit-transition-property: -webkit-transform, opacity;
+	-moz-transition-property: -moz-transform, opacity;
+	transition-property: transform, opacity;
 }
